--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -22,13 +22,13 @@
 # https://drupal.org/SA-CORE-2014-003   CVE-2014-5019/CVE-2014-5020/CVE-2014-5021/CVE-2014-5022 7.29/6.32 http://osvdb.org/109237 http://osvdb.org/109236 http://osvdb.org/109238 http://osvdb.org/109284
 # https://drupal.org/SA-CORE-2014-004   CVE-2014-5265/CVE-2014-5266/CVE-2014-5267
 # https://drupal.org/SA-CORE-2014-005   CVE-2014-3704   7.31
-# https://drupal.org/SA-CORE-2014-006   Requested       7.34/6.34
+# https://drupal.org/SA-CORE-2014-006   CVE-2014-9015/CVE-2014-9016 7.34/6.34
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
     secure_version: '7.34'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2014-006'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9015 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9016 https://drupal.org/SA-CORE-2014-006'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
@@ -36,6 +36,6 @@ Drupal 6:
     location: ['/CHANGELOG.txt']
     secure_version: '6.34'
     regexp: ['^Drupal (?P<version>[0-9.]+)']
-    cve: 'https://drupal.org/SA-CORE-2014-006'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9015 https://drupal.org/SA-CORE-2014-006'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
