--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -12,11 +12,12 @@
 # CVE-2014-4613/CVE-2014-4614 2.6.2 http://osvdb.org/103774 http://piwigo.org/releases/2.6.2
 # CVE-2014-4648 2.6.3 http://piwigo.org/releases/2.6.3 http://osvdb.org/108063
 # CVE-2014-4649 2.7.0beta2 http://piwigo.org/bugs/view.php?id=3089 not yet released 2014-08-25
+# CVE-2014-XXXX 2.7.2 http://piwigo.org/forum/viewtopic.php?id=24850
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.6.3'
+    secure_version: '2.7.2'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4648 http://piwigo.org/releases/2.6.3 http://osvdb.org/108063'
+    cve: 'http://piwigo.org/forum/viewtopic.php?id=24850'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
