--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -83,11 +83,15 @@
 # PMASA-2014-10 CVE-2014-6300   4.2.8.1/4.1.14.4/4.0.10.3
 # PMASA-2014-11 CVE-2014-7217   4.2.9.1/4.1.14.5/4.0.10.4
 # PMASA-2014-12 CVE-2014-8326   4.2.10.1/4.1.14.6/4.0.10.5
+# PMASA-2014-13 CVE-2014-8958   4.2.12/4.1.14.7/4.0.10.6
+# PMASA-2014-14 CVE-2014-8959   4.2.12/4.1.14.7/4.0.10.6
+# PMASA-2014-15 CVE-2014-8960   4.2.12/4.1.14.7
+# PMASA-2014-16 CVE-2014-8961   4.2.12/4.1.14.7
 phpMyAdmin:
   1:
     location: ['/libraries/Config.class.php']
-    secure_version: '4.2.10.1'
+    secure_version: '4.2.12'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8326 http://www.phpmyadmin.net/home_page/security/PMASA-2014-12.php'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8958 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8959 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8960 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8961'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
