--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -67,13 +67,14 @@
 # CVE-2014-5241/CVE-2014-5242/CVE-2014-5243 1.23.2/1.22.9/1.19.18 http://lists.wikimedia.org/pipermail/mediawiki-announce/2014-July/000157.html
 # CVE-2014-7199 1.23.4/1.22.11/1.19.19  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-September/000161.html
 # CVE-2014-7295 1.23.5/1.22.12/1.19.20  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-October/000163.html
-# CVE-2014-XXXX 1.23.7/1.22.14/1.19.22  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html
+# CVE-2014-9276 1.23.7/1.22.14/1.19.22  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html
+# CVE-2014-9277 1.23.7/1.22.14/1.19.22  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.23.7'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.22:
@@ -81,7 +82,7 @@ MediaWiki 1.22:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.22.14'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
@@ -105,7 +106,7 @@ MediaWiki 1.19:
     location: ['/includes/DefaultSettings.php']
     secure_version: '1.19.22'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
