--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -32,11 +32,12 @@
 # CVE-2014-1840 1.6.13  http://osvdb.org/102937 http://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
 # CVE-2014-XXXX 1.6.14  http://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
 # CVE-2014-5248 1.6.15  http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
+# CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/
 MyBB:
   1:
       location: ['/inc/class_core.php']
-      secure_version: '1.6.15'
+      secure_version: '1.8.3'
       regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-      cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5248 http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/'
+      cve: 'http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/'
       fingerprint: detect_general
       post_processing: ['php5.fcgi']
