--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -69,26 +69,35 @@
 # CVE-2014-7295 1.23.5/1.22.12/1.19.20  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-October/000163.html
 # CVE-2014-9276 1.23.7/1.22.14/1.19.22  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html
 # CVE-2014-9277 1.23.7/1.22.14/1.19.22  https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html
+# CVE-2014-XXXX 1.24.1/1.23.8/1.22.15/1.19.23 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html
+MediaWiki 1.24:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.24.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.7'
+    secure_version: '1.23.8'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.22.14'
+    secure_version: '1.22.15'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.7'
+    secure_version: '1.24.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -96,7 +105,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.7'
+    secure_version: '1.24.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -104,15 +113,15 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.19.22'
+    secure_version: '1.19.23'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9276 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9277 https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-November/000170.html'
+    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2014-December/000173.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.23.7'
+    secure_version: '1.24.1'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
