--- a/yamls/nibbleblog.yml
+++ b/yamls/nibbleblog.yml
@@ -1,10 +1,10 @@
 # URL: http://www.nibbleblog.com/
-# CVE-2014-XXXX 4.0.2 http://blog.nibbleblog.com/post/nibbleblog-v4.0.2-coffee/ http://seclists.org/fulldisclosure/2014/Nov/38
+# CVE-2014-8996 4.0.2 http://blog.nibbleblog.com/post/nibbleblog-v4.0.2-coffee/ http://seclists.org/fulldisclosure/2014/Nov/38
 Nibbleblog:
   1:
     location: ['/admin/boot/rules/98-constants.bit']
     secure_version: '4.0.2'
     regexp: ['define.*?NIBBLEBLOG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.nibbleblog.com/post/nibbleblog-v4.0.2-coffee/'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8996 http://blog.nibbleblog.com/post/nibbleblog-v4.0.2-coffee/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
