--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -32,7 +32,9 @@
 # CVE-2014-1840 1.6.13  http://osvdb.org/102937 http://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
 # CVE-2014-XXXX 1.6.14  http://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
 # CVE-2014-5248 1.6.15  http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
-# CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/
+# CVE-2014-9240 1.8.2
+# CVE-2014-9241 1.8.2
+# CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/ CVE requested http://www.openwall.com/lists/oss-security/2014/12/10/14
 MyBB:
   1:
       location: ['/inc/class_core.php']
