--- a/yamls/concrete5.yml
+++ b/yamls/concrete5.yml
@@ -9,12 +9,12 @@
 # CVE-2014-XXXX 5.6.3 http://osvdb.org/109270
 # CVE-2014-XXXX 5.6.3 http://osvdb.org/109271
 # CVE-2014-XXXX 5.6.3 http://osvdb.org/109272
-# CVE-2014-XXXX TODO http://seclists.org/fulldisclosure/2014/Dec/38 CVE requested in oss-security 2014-01-02. No fix available.
+# CVE-2014-XXXX 5.7.3 http://seclists.org/fulldisclosure/2014/Dec/38 http://www.openwall.com/lists/oss-security/2015/01/02/1 https://github.com/concrete5/concrete5-5.7.0/commit/e3d47d2af88ddef36deaf754ef22f1f39b9b623b
 concrete5:
   1:
     location: ['/concrete/config/version.php']
-    secure_version: '5.6.3'
+    secure_version: '5.7.3'
     regexp: ['\$APP_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5107 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-5108 http://osvdb.org/109270 http://osvdb.org/109271 http://osvdb.org/109272'
+    cve: 'http://seclists.org/bugtraq/2014/Dec/53 http://osvdb.org/115633 http://osvdb.org/115634'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
