--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -12,7 +12,7 @@
 # CVE-2014-4613/CVE-2014-4614 2.6.2 http://osvdb.org/103774 http://piwigo.org/releases/2.6.2
 # CVE-2014-4648 2.6.3 http://piwigo.org/releases/2.6.3 http://osvdb.org/108063
 # CVE-2014-4649 2.7.0beta2 http://piwigo.org/bugs/view.php?id=3089 not yet released 2014-08-25
-# CVE-2014-XXXX 2.7.2 http://piwigo.org/forum/viewtopic.php?id=24850
+# CVE-2014-9115 2.7.2/2.6.4/2.5.5 http://osvdb.org/114581 http://seclists.org/fulldisclosure/2014/Nov/23 http://piwigo.org/forum/viewtopic.php?id=24850
 # CVE-2015-XXXX 2.7.3/2.6.5/2.5.6 http://piwigo.org/forum/viewtopic.php?id=25016
 Piwigo:
   1:
