MyBB release fixes vulnerabilities.

--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -35,11 +35,12 @@
 # CVE-2014-9240 1.8.2
 # CVE-2014-9241 1.8.2
 # CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/ CVE requested http://www.openwall.com/lists/oss-security/2014/12/10/14
+# CVE-2015-XXXX 1.8.4   http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/ http://www.openwall.com/lists/oss-security/2015/02/21/4
 MyBB:
   1:
       location: ['/inc/class_core.php']
-      secure_version: '1.8.3'
+      secure_version: '1.8.4'
       regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-      cve: 'http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/'
+      cve: 'http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/'
       fingerprint: detect_general
       post_processing: ['php5.fcgi']
