--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -41,6 +41,6 @@ MyBB:
       location: ['/inc/class_core.php']
       secure_version: '1.8.4'
       regexp: ['.*?public.*?\$version.*?(?P<version>[0-9.]+)']
-      cve: 'http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/'
+      cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2149 http://blog.mybb.com/2015/02/15/mybb-1-8-4-released-feature-update-security-maintenance-release/'
       fingerprint: detect_general
       post_processing: ['php5.fcgi']
