--- a/yamls/serendipity.yml
+++ b/yamls/serendipity.yml
@@ -12,11 +12,12 @@
 # CVE-2013-5314 1.6.2   http://osvdb.org/95176 https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
 # CVE-2013-XXXX 1.7     http://blog.s9y.org/archives/247-Serendipity-1.7-released.html https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
 # CVE-2013-5670 1.7.3   http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html http://www.opensyscom.fr/Actualites/serendipity-xss-vulnerability.html
+# CVE-2015-2289 2.0.1   http://blog.s9y.org/archives/263-Serendipity-2.0.1-released.html
 Serendipity:
   1:
     location: ['/serendipity_config.inc.php']
-    secure_version: '1.7.3'
+    secure_version: '2.0.1'
     regexp: ['\$serendipity.*?version.*?(?P<version>[0-9.]+)']
-    cve: 'CVE-2013-5670 http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2289 http://blog.s9y.org/archives/263-Serendipity-2.0.1-released.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
