--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -14,3 +14,11 @@ WordPress plugin videowhisper-video-presentation:
     cve: 'http://www.openwall.com/lists/oss-security/2015/04/01/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wassup:
+  1:
+    location: ['/wp-content/plugins/wassup/readme.txt']
+    secure_version: '1.8.3.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-2633'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
