--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -14,6 +14,7 @@ WordPress plugin videowhisper-video-presentation:
     cve: 'http://www.openwall.com/lists/oss-security/2015/04/01/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2008-0520 wassup 1.4.4 http://www.exploit-db.com/exploits/5017/
 WordPress plugin wassup:
   1:
     location: ['/wp-content/plugins/wassup/readme.txt']
