--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -15,6 +15,7 @@ WordPress plugin videowhisper-video-presentation:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2008-0520 wassup 1.4.4 http://www.exploit-db.com/exploits/5017/
+# CVE-2009-XXXX wassup 1.7.2.1 http://www.openwall.com/lists/oss-security/2015/04/06/1
 WordPress plugin wassup:
   1:
     location: ['/wp-content/plugins/wassup/readme.txt']
