--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1,3 +1,5 @@
+# CVE-2012-3351 jw-player-plugin-for-wordpress TODO
+#
 WordPress plugin videowhisper-video-conference-integration:
   1:
     location: ['/wp-content/plugins/videowhisper-video-conference-integration/readme.txt']
@@ -22,5 +24,15 @@ WordPress plugin wassup:
     secure_version: '1.8.3.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-2633'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+# CVE-2012-4263 better-wp-security 3.2.5
+# CVE-2012-4264 better-wp-security 3.2.5
+WordPress plugin better-wp-security:
+  1:
+    location: ['/wp-content/plugins/better-wp-security/readme.txt']
+    secure_version: '3.2.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-4263 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-4264'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
