CVE-2015-3011, CVE-2015-3012, CVE-2015-3013

--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -41,10 +41,10 @@
 # oC-SA-2014-016    CVE-2014-3838   6.0.3/5.0.16
 # oC-SA-2014-017    CVE-2014-3839   6.0.3
 # oC-SA-2014-018    CVE-2014-4929   6.0.4/5.0.17
-# OC-SA-2015-001    TODO            7.0.5/6.0.7/5.0.19
-# OC-SA-2015-002    TODO            7.0.5/6.0.7/5.0.19
+# OC-SA-2015-001    CVE-2015-3011   7.0.5/6.0.7/5.0.19
+# OC-SA-2015-002    CVE-2015-3012   7.0.5/6.0.7/5.0.19
 # OC-SA-2015-003    TODO            7.0.5/6.0.7/5.0.19 Windows only
-# OC-SA-2015-004    TODO            7.0.5/6.0.7/5.0.19
+# OC-SA-2015-004    CVE-2015-3013   7.0.5/6.0.7/5.0.19
 ownCloud 7:
   1:
     location: ['/owncloud/version.php']
