--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -132,18 +132,19 @@
 # CVE-2014-9038 4.0.1   https://wordpress.org/news/2014/11/wordpress-4-0-1/
 # CVE-2014-9039 4.0.1   https://wordpress.org/news/2014/11/wordpress-4-0-1/
 # CVE-2014-6412 TODO
+# CVE-2015-XXXX 4.1.2   https://wordpress.org/news/2015/04/wordpress-4-1-2/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.0.1'
+    secure_version: '4.1.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2014/11/wordpress-4-0-1/'
+    cve: 'https://wordpress.org/news/2015/04/wordpress-4-1-2/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.0.1'
+    secure_version: '4.1.2'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2014/11/wordpress-4-0-1/'
+    cve: 'https://wordpress.org/news/2015/04/wordpress-4-1-2/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
