--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -93,6 +93,6 @@ phpMyAdmin:
     location: ['/libraries/Config.class.php']
     secure_version: '4.4.6.1'
     regexp: ['.*?PMA_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2206'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3902 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3903'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
