--- a/yamls/coppermine.yml
+++ b/yamls/coppermine.yml
@@ -5,11 +5,12 @@
 # CVE-2012-1614 1.5.20  http://osvdb.org/80732 http://osvdb.org/80733 http://osvdb.org/80734 http://osvdb.org/80735 waraxe-2012-SA#081
 # CVE-2014-XXXX 1.5.26  http://osvdb.org/104357 http://osvdb.org/104358
 # CVE-2014-4612 1.5.28  http://forum.coppermine-gallery.net/index.php/topic,77376.0.html http://sourceforge.net/p/coppermine/code/8674/
+# CVE-2015-3923 1.5.36
 Coppermine:
   1:
     location: ['/sql/basic.sql']
-    secure_version: '1.5.28'
+    secure_version: '1.5.36'
     regexp: ['\#\#  Coppermine version.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4612 http://forum.coppermine-gallery.net/index.php/topic,77376.0.html'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-3923'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
