--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -179,3 +179,11 @@ WordPress plugin easy-social-icons:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2084'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-responsive-preview:
+  1:
+    location: ['/wp-content/plugins/wp-responsive-preview/readme.txt']
+    secure_version: '1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4594'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
