--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -187,3 +187,11 @@ WordPress plugin wp-responsive-preview:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-4594'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin photo-gallery:
+  1:
+    location: ['/wp-content/plugins/photo-gallery/readme.txt']
+    secure_version: '1.1.31'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-6315'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
